k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-smartlogix
  namespace: smartlogix
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: frontend-smartlogix
  template:
    metadata:
      labels:
        app: frontend-smartlogix
      annotations:
        kubernetes.io/change-cause: "Forzar despliegue de URL AWS v2"
        redeploy-date: "2026-06-20-v2"
    spec:
      containers:
      - name: frontend-smartlogix
        image: 908560159565.dkr.ecr.us-east-1.amazonaws.com/frontend-smartlogix:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 80 
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-smartlogix
  namespace: smartlogix
spec:
  type: LoadBalancer 
  ports:
  - port: 80          
    targetPort: 80    
  selector:
    app: frontend-smartlogix
