k8s/postgres-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: smartlogix
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  namespace: smartlogix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
